fixed the social media layout and prevented overflow , also added the final strucutre for the nav and social media footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,3 +72,7 @@ body{
     border-bottom: 1px solid #3a3a3a;
 }
 
+#h-v {
+    width: 100%;
+    height: 100px;
+}
